[gd_scene load_steps=5 format=3 uid="uid://ctopoumgyqeey"]

[ext_resource type="Script" path="res://assets/scripts/main.gd" id="1_jhc88"]
[ext_resource type="Script" path="res://assets/scripts/camera/main_camera.gd" id="2_0l0nl"]
[ext_resource type="PackedScene" uid="uid://cvs58kdmkdxbk" path="res://assets/scenes/boat.tscn" id="3_w5t17"]
[ext_resource type="Script" path="res://assets/scripts/ui/pause.gd" id="7_jk3rh"]

[node name="main" type="Node2D"]
script = ExtResource("1_jhc88")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 512.0
offset_bottom = 256.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = -511.0
offset_right = 1.0
offset_bottom = 256.0
color = Color(0.152941, 0.831373, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0078125
anchor_bottom = -0.0078125
offset_left = 1020.0
offset_top = 4.0
offset_right = 1532.0
offset_bottom = 260.0
color = Color(0.152941, 0.831373, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -4.01172
anchor_top = 0.964844
anchor_right = -1.96875
anchor_bottom = 0.964844
offset_left = 1020.0
offset_top = 4.0
offset_right = 1532.0
offset_bottom = 260.0
color = Color(0, 0.768627, 0.901961, 1)
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(32, 32)
script = ExtResource("2_0l0nl")

[node name="boat" parent="." instance=ExtResource("3_w5t17")]
position = Vector2(249, 113)

[node name="pause_bg" type="ColorRect" parent="."]
visible = false
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.493545, 0.493546, 0.493546, 0.501961)
script = ExtResource("7_jk3rh")

[node name="ColorRect" type="ColorRect" parent="pause_bg"]
layout_mode = 0
offset_left = 26.0
offset_top = 25.0
offset_right = 30.0
offset_bottom = 40.0
color = Color(0.211765, 0.211765, 0.211765, 1)

[node name="ColorRect" type="ColorRect" parent="pause_bg/ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_right = 12.0
offset_bottom = 15.0
color = Color(0.211765, 0.211765, 0.211765, 1)

[connection signal="pause_close" from="Camera2D" to="pause_bg" method="_on_camera_2d_pause_close"]
[connection signal="pause_open" from="Camera2D" to="pause_bg" method="_on_camera_2d_pause_open"]
[connection signal="move_camera_horiz" from="boat" to="Camera2D" method="_on_boat_move_camera_horiz"]
[connection signal="move_camera_vert" from="boat" to="Camera2D" method="_on_boat_move_camera_vert"]
